# esp32-k230-tracking-car

./: CMakeLists.txt  CURRENT_FEATURES.md  README.md  face_register.py  fill_experiment1_report.py  k230_uart_send_example.py  main1.py  sdkconfig.defaults  update_report.py  update_report_v2.py  update_report_v3.py  update_report_v4.py
android_app/: README.md  local.properties  settings.gradle  tracking-car-dashboard-debug.apk  tracking-car-dashboard-debug.apk.idsig
android_app/app/: build.gradle
android_app/manual_build/: debug.keystore
android_app/manual_build/dex/: classes.dex
android_app/scripts/: build_debug_apk.ps1
docs/: pinout.md  project_summary.md  voice_wifi_completed_features.md
docs/.obsidian/: workspace.json
main/: CMakeLists.txt  Kconfig.projbuild  deepseek_client.c  deepseek_client.h  encoder.c  encoder.h  idf_component.yml  k230_uart.c  k230_uart.h  motor_control.c  motor_control.h  mpu6050.c  mpu6050.h  robot_emotion_ui.c  robot_emotion_ui.h  robot_face_ui.c  robot_face_ui.h  robot_lcd.c  robot_lcd.h  robot_mqtt_client.c  robot_mqtt_client.h  robot_track.h  station_example_main.c  ultrasonic.c  ultrasonic.h  vehicle_ai_control.c  vehicle_ai_control.h  wifi_connection.c  wifi_connection.h
raspberry_pi_voice/: .env.example  README.md  dashboard_server.py  requirements.txt  voice_gateway.py
raspberry_pi_voice/car_voice/: __init__.py  asr.py  assistant.py  cloud_topics.py  config.py  llm.py  robot_mqtt.py  schema.py  speech.py
raspberry_pi_voice/dashboard/: README.md  app.js  index.html  manifest.webmanifest  service-worker.js  style.css
(+5 files in other folders)
